
Add groovyc taskdef to the GantBuilder instance so the user doesn't have to.  GANT-19 relates.

Tidied up the tool and target set classes to ensure that both "<<" and "** *" operators work correctly.

Stop the binding entry target from being redefined.

Remove the task entry in the binding.  It was deprecated and advertised as being removed in v1.3.

Fixes:  GANT-19, GANT-32, GANT-38, GANT-42, GANT-46.

1.3.0 ( r9298, tagged as 9302 )
-------------------------------

Change the way Groovy installs so that it doesn't install into the Groovy installation, but into its own
hierarchy.  There are two distributions:

            1.  Requires a separate Groovy installation.  Currently there are two version:
                a.  Compiled against Groovy 1.5.6
                b.  Compiled against Groovy 1.6-beta-1

            2.  Self-contained, includes all dependent jars.

Various tests amended to work correctly on Windows. Tests previously only checked on Ubuntu, Mac OS X and Solaris.

Created a Gant log.

Created Windows batch files that work.  Posix shell scripts only worked previously.


1.2.0 ( r9173 )
---------------

Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
efficient cloning for multi-threading builds.

Remove the inserting of the class name for target set classes into the binding.

Make the symbols added to the binding by the tools lowercase rather than upper case.  cf. GANT-29.

The Maven target set used to provide access to properties via the symbol Maven, this is changed to
maven.  This change is to make things consistent with the above change of case of tool symbols. All uses of
Maven as a reference from the binding must be replaced by maven.

Add in checks for duplicate symbols in the binding.

Change --cachedir option to short form -C so that -d can be used for --debug.

Updated Maven Ant Tasks to 2.0.9.

Added the ability to specify remote repositories in the Maven Target set.
