@@ -19,6 +19,9 @@ Stop the binding entry target from being redefined.
 
 Remove the task entry in the binding.  It was deprecated and advertised as being removed in v1.3.
 
+Added a new Gant constructor to allow precompiled scripts to be used.  Provided by Peter Ledbrook,
+cf. GANT-47.
+
 Fixes:  GANT-19, GANT-32, GANT-38, GANT-42, GANT-46.
 
 1.3.0 ( r9298, tagged as 9302 )
